..F....... [ZBXNEXT-743] fixed displaying scrollbar in high contrast themes

--- a/sass/stylesheets/sass/components/_svg-gauge.scss
+++ b/sass/stylesheets/sass/components/_svg-gauge.scss
@@ -39,6 +39,10 @@
 		text-anchor: end;
 	}
 
+	.svg-gauge-label-top-center {
+		text-anchor: middle;
+	}
+
 	.svg-gauge-value-and-units-no-data {
 		fill: $font-alt-color;
 	}
